# models/section.go
@@ -1,13 +1,19 @@
 package models
 
+import "time"
+
+type UpdateSectionInput struct {
+	Title string `json:"title" binding:"required"`
+}
+
 type CreateSectionInput struct {
 	Title string `json:"title" binding:"required"`
 }
 
 type Section struct {
-	ID        int64  `json:"id"`
-	Title     string `json:"title"`
-	Sort      int    `json:"sort"`
-	CreatedAt int64  `json:"created_at"` // ✅ timestamp 格式（Unix 秒數）
-	UpdatedAt int64  `json:"updated_at"`
+	ID        int64     `json:"id"`
+	Title     string    `json:"title"`
+	SortOrder int       `json:"sort_order"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
